Adding user functional.